huginn-threaded-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Deployment","metadata":{"annotations":{},"creationTimestamp":null,"name":"huginn-threaded","namespace":"default"},"spec":{"replicas":1,"strategy":{},"template":{"metadata":{"creationTimestamp":null,"labels":{"io.kompose.service":"huginn-threaded"}},"spec":{"containers":[{"args":["/scripts/init","bin/threaded.rb"],"env":[{"name":"DATABASE_ADAPTER","value":"postgresql"},{"name":"DATABASE_NAME","value":"huginn"},{"name":"DATABASE_PASSWORD","value":"D [...]
  creationTimestamp: null
  generation: 1
  labels:
    io.kompose.service: huginn-threaded
  name: huginn-threaded
  selfLink: /apis/extensions/v1beta1/namespaces//deployments/huginn-threaded
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: huginn-threaded
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: huginn-threaded
    spec:
      containers:
      - args:
        - /scripts/init
        - bin/threaded.rb
        image: cantino/huginn-single-process
        imagePullPolicy: Always
        name: huginn-threaded
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
