kanboard-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kanboard
    version: stable
  name: kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
      version: stable
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kanboard
        version: stable
      name: kanboard
    spec:
      containers:
      - image: kanboard/kanboard:stable
        imagePullPolicy: IfNotPresent
        name: kanboard
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - name: kanboard-config-volume
            mountPath: /var/www/app/data
            readOnly: true
      volumes:
        - name: kanboard-config-volume
          secret:
            secretName: kanboard-config
            items:
              - key: config
                path: config.php
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
