traefik-ingress-controller_deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    k8s-app: traefik-ingress-lb
  name: traefik
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik
      hostNetwork: true
      nodeSelector:
        # This is pinned to a specific node in our configuration
        kubernetes.io/hostname: robot-ghost-poop-2.xn--9q8h2cq1m.ws
      volumes:
      - name: traefik-cache
        persistentVolumeClaim: 
          claimName: traefik-claim
      - name: traefik-cfg
        configMap:
          name: traefik-cfg
      containers:
      - args:
        - -d
        - --web
        - --web.address=:8081
        - --kubernetes
        - --configFile=/config/traefik.toml
        - --logLevel=INFO
        image: traefik
        imagePullPolicy: Always
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: admin
          containerPort: 8081
          hostPort: 8081
        resources:
          limits:
            cpu: 200m
            memory: 30Mi
          requests:
            cpu: 100m
            memory: 20Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/traefik
          name: traefik-cache
        - mountPath: /config
          name: traefik-cfg
      dnsPolicy: ClusterFirst
      hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
status: {}
