huginn-threaded-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"io.kompose.service":"huginn-threaded"},"name":"huginn-threaded","namespace":"default"},"spec":{"clusterIP":"None","ports":[{"name":"headless","port":55555,"targetPort":0}],"selector":{"io.kompose.service":"huginn-threaded"}},"status":{"loadBalancer":{}}}
  creationTimestamp: null
  labels:
    io.kompose.service: huginn-threaded
  name: huginn-threaded
  selfLink: /api/v1/namespaces//services/huginn-threaded
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    protocol: TCP
    targetPort: 55555
  selector:
    io.kompose.service: huginn-threaded
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
