huginn-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"io.kompose.service":"huginn-web"},"name":"huginn-web","namespace":"default"},"spec":{"ports":[{"name":"3000","port":3000,"targetPort":3000}],"selector":{"io.kompose.service":"huginn-web"}},"status":{"loadBalancer":{}}}
  creationTimestamp: null
  labels:
    io.kompose.service: huginn-web
  name: huginn-web
  selfLink: /api/v1/namespaces//services/huginn-web
spec:
  clusterIP: <unknown>
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    io.kompose.service: huginn-web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
