kanboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanboard-service
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: kanboard
