kanboard.yaml
# Configuration for Kanboard (https://kanboard.net/)
# 
#
# See kanboard-ingress.yaml for ingress details
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kanboard
    version: stable
  name: kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
      version: stable
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kanboard
        version: stable
      name: kanboard
    spec:
      containers:
      - image: kanboard/kanboard:stable
        imagePullPolicy: IfNotPresent
        name: kanboard
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
          name: http
          containerPort: 80
        # We should probably also mount a plugins folder
        # and a folder for uploaded files
        volumeMounts:
          - name: kanboard-config-volume
            mountPath: /var/www/app/data
            readOnly: true
      volumes:
        - name: kanboard-config-volume
          secret:
            secretName: kanboard-config
            items:
              - key: config
                path: config.php
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kanboard
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: kanboard
