huginn-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"huginn-web-ingress","namespace":"default"},"spec":{"rules":[{"host":"hugs.sharkbaitextraordinaire.local","http":{"paths":[{"backend":{"serviceName":"huginn-web-service","servicePort":"http"},"path":"/"}]}}]}}
  creationTimestamp: null
  generation: 1
  name: huginn-web-ingress
  selfLink: /apis/extensions/v1beta1/namespaces//ingresses/huginn-web-ingress
spec:
  rules:
  - host: hugs.sharkbaitextraordinaire.local
    http:
      paths:
      - backend:
          serviceName: huginn-web
          servicePort: http
        path: /
status:
  loadBalancer: {}
